--- a/mobile-app/aura_health/pubspec.yaml
+++ b/mobile-app/aura_health/pubspec.yaml
@@ -36,12 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   camera: ^0.11.3
   gal: ^2.3.2
+  firebase_core: ^4.3.0
+  cloud_firestore: ^6.1.0
+  firebase_auth: ^6.1.1
   image_picker: ^1.2.1
   flutter_spinkit: ^5.2.2
   flutter_riverpod: ^3.1.0
   http: ^1.6.0
   intl: ^0.20.2
   uuid: ^4.5.2
+  google_sign_in: ^7.2.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
