--- a/prescription_image_ocr/Dockerfile
+++ b/prescription_image_ocr/Dockerfile
@@ -10,11 +10,11 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY ./prescription_image_ocr/requirements.txt .
+RUN pip install --no-cache-dir -r ./prescription_image_ocr/requirements.txt
 
 # Copy application code
 COPY . .
 
 # Start FastAPI app
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "10000"]
+CMD ["uvicorn", "prescription_image_ocr.main:app", "--host", "0.0.0.0", "--port", "10000"]
