--- a/prescription_image_ocr/Dockerfile
+++ b/prescription_image_ocr/Dockerfile
@@ -9,12 +9,12 @@ RUN apt-get update && apt-get install -y \
 # Set working directory
 WORKDIR /app
 
-# Install Python dependencies
-COPY ./prescription_image_ocr/requirements.txt .
-RUN pip install --no-cache-dir -r ./prescription_image_ocr/requirements.txt
+# Copy requirements and install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
 
 # Start FastAPI app
-CMD ["uvicorn", "prescription_image_ocr.main:app", "--host", "0.0.0.0", "--port", "10000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "10000"]
