--- a/mobile-app/aura_health/pubspec.yaml
+++ b/mobile-app/aura_health/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   uuid: ^4.5.2
   google_sign_in: ^7.2.0
   hive_flutter: ^1.1.0
+  speech_to_text: ^7.3.0
+  google_generative_ai: ^0.4.7
+  flutter_dotenv: ^6.0.0
+  file_picker: ^10.3.8
+  build_runner: ^2.9.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
