--- a/mobile-app/aura_health/pubspec.yaml
+++ b/mobile-app/aura_health/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   file_picker: ^10.3.8
   build_runner: ^2.9.0
   http_parser: ^4.1.2
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -107,3 +108,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app_logo.png"
+  min_sdk_android: 21 # default is 21
